Running new simmulations.

--- a/Articles/SFC/Simulation_Franklin.org
+++ b/Articles/SFC/Simulation_Franklin.org
@@ -702,37 +702,38 @@ print(shock1.to_latex())
 \toprule
 {} &  \$\textbackslash Delta \textbackslash phi\_0\$ \\
 \midrule
-alpha     &     1.000000e+00 \\
-alpha\_k   &     3.000000e-01 \\
-gamma\_F   &     8.000000e-02 \\
-gamma\_u   &     9.000000e-02 \\
-omega     &     2.500000e-01 \\
-rm        &     1.000000e-02 \\
-spread\_l  &     0.000000e+00 \\
-spread\_mo &     0.000000e+00 \\
-un        &     8.000000e-01 \\
-v         &     1.200000e+00 \\
-phi\_0     &     3.000000e-02 \\
-phi\_1     &     1.000000e-01 \\
-R         &     7.000000e-01 \\
-infla     &     0.000000e+00 \\
-gC        &     0.000000e+00 \\
-real\_data &     0.000000e+00 \\
-\_K\_f\_\_1   &     5.102256e+25 \\
-\_M\_h\_\_1   &     5.661428e+26 \\
-\_MO\_\_1    &     5.860454e+26 \\
-\_Lf\_\_1    &    -1.990252e+25 \\
-\_h\_\_1     &     4.350000e-02 \\
-\_L\_\_1     &    -1.990252e+25 \\
-\_M\_\_1     &     5.661428e+26 \\
-\_K\_HD\_\_1  &     5.860454e+26 \\
-\_I\_h\_\_1   &     1.651634e+25 \\
-\_ph\_\_1    &     1.000000e+00 \\
-TIME      &     1.051000e+03 \\
-Ih/Y      &     4.996400e-01 \\
-I/Y       &     5.431400e-01 \\
-Z/Y       &     7.065000e-01 \\
-gY        &     2.900000e-02 \\
+alpha       &     1.000000e+00 \\
+alpha\_k     &     3.000000e-01 \\
+gamma\_F     &     8.000000e-02 \\
+gamma\_u     &     9.000000e-02 \\
+omega       &     2.500000e-01 \\
+rm          &     1.000000e-02 \\
+spread\_l    &     0.000000e+00 \\
+spread\_mo   &     0.000000e+00 \\
+un          &     8.000000e-01 \\
+v           &     1.200000e+00 \\
+phi\_0       &     3.000000e-02 \\
+phi\_1       &     1.000000e-01 \\
+R           &     7.000000e-01 \\
+infla       &     0.000000e+00 \\
+gC          &     2.400000e-02 \\
+equal\_rates &     1.000000e+00 \\
+\_K\_f\_\_1     &     6.062022e+25 \\
+\_M\_h\_\_1     &     5.623992e+26 \\
+\_MO\_\_1      &     5.860454e+26 \\
+\_Ck\_\_1      &     1.123111e+25 \\
+\_Lf\_\_1      &    -2.364620e+25 \\
+\_h\_\_1       &     4.350000e-02 \\
+\_L\_\_1       &    -2.364620e+25 \\
+\_M\_\_1       &     5.623992e+26 \\
+\_K\_HD\_\_1    &     5.860454e+26 \\
+\_I\_h\_\_1     &     1.651634e+25 \\
+\_ph\_\_1      &     1.000000e+00 \\
+TIME        &     1.051000e+03 \\
+Ih/Y        &     4.205400e-01 \\
+I/Y         &     4.640400e-01 \\
+Z/Y         &     7.065000e-01 \\
+gY          &     2.900000e-02 \\
 \bottomrule
 \end{tabular}
 :end:
@@ -760,37 +761,38 @@ print(shock2.to_latex())
 \toprule
 {} &  \$\textbackslash Delta \textbackslash omega\$ \\
 \midrule
-alpha     &     1.000000e+00 \\
-alpha\_k   &     3.000000e-01 \\
-gamma\_F   &     8.000000e-02 \\
-gamma\_u   &     9.000000e-02 \\
-omega     &     2.400000e-01 \\
-rm        &     1.000000e-02 \\
-spread\_l  &     0.000000e+00 \\
-spread\_mo &     0.000000e+00 \\
-un        &     8.000000e-01 \\
-v         &     1.200000e+00 \\
-phi\_0     &     2.500000e-02 \\
-phi\_1     &     1.000000e-01 \\
-R         &     7.000000e-01 \\
-infla     &     0.000000e+00 \\
-gC        &     0.000000e+00 \\
-real\_data &     0.000000e+00 \\
-\_K\_f\_\_1   &     3.798556e+23 \\
-\_M\_h\_\_1   &     5.158047e+24 \\
-\_MO\_\_1    &     5.428750e+24 \\
-\_Lf\_\_1    &    -2.707036e+23 \\
-\_h\_\_1     &     3.600000e-02 \\
-\_L\_\_1     &    -2.707036e+23 \\
-\_M\_\_1     &     5.158047e+24 \\
-\_K\_HD\_\_1  &     5.428750e+24 \\
-\_I\_h\_\_1   &     1.272363e+23 \\
-\_ph\_\_1    &     1.000000e+00 \\
-TIME      &     1.051000e+03 \\
-Ih/Y      &     5.140000e-01 \\
-I/Y       &     5.500000e-01 \\
-Z/Y       &     7.240000e-01 \\
-gY        &     2.400000e-02 \\
+alpha       &     1.000000e+00 \\
+alpha\_k     &     3.000000e-01 \\
+gamma\_F     &     8.000000e-02 \\
+gamma\_u     &     9.000000e-02 \\
+omega       &     2.400000e-01 \\
+rm          &     1.000000e-02 \\
+spread\_l    &     0.000000e+00 \\
+spread\_mo   &     0.000000e+00 \\
+un          &     8.000000e-01 \\
+v           &     1.200000e+00 \\
+phi\_0       &     2.500000e-02 \\
+phi\_1       &     1.000000e-01 \\
+R           &     7.000000e-01 \\
+infla       &     0.000000e+00 \\
+gC          &     2.400000e-02 \\
+equal\_rates &     1.000000e+00 \\
+\_K\_f\_\_1     &     4.534949e+23 \\
+\_M\_h\_\_1     &     5.105569e+24 \\
+\_MO\_\_1      &     5.428750e+24 \\
+\_Ck\_\_1      &     8.652071e+22 \\
+\_Lf\_\_1      &    -3.231814e+23 \\
+\_h\_\_1       &     3.600000e-02 \\
+\_L\_\_1       &    -3.231814e+23 \\
+\_M\_\_1       &     5.105569e+24 \\
+\_K\_HD\_\_1    &     5.428750e+24 \\
+\_I\_h\_\_1     &     1.272363e+23 \\
+\_ph\_\_1      &     1.000000e+00 \\
+TIME        &     1.051000e+03 \\
+Ih/Y        &     4.310000e-01 \\
+I/Y         &     4.670000e-01 \\
+Z/Y         &     7.240000e-01 \\
+gY          &     2.400000e-02 \\
 \bottomrule
 \end{tabular}
 #+end_export
@@ -817,32 +819,33 @@ print(shock3.to_latex())
 \toprule
 {} &   \$\textbackslash Delta rm\$ \\
 \midrule
-alpha     &  1.000000e+00 \\
-alpha\_k   &  3.000000e-01 \\
-gamma\_F   &  8.000000e-02 \\
-gamma\_u   &  9.000000e-02 \\
-omega     &  2.500000e-01 \\
-rm        &  1.200000e-02 \\
-spread\_l  &  0.000000e+00 \\
-spread\_mo &  0.000000e+00 \\
-un        &  8.000000e-01 \\
-v         &  1.200000e+00 \\
-phi\_0     &  2.500000e-02 \\
-phi\_1     &  1.000000e-01 \\
-R         &  7.000000e-01 \\
-infla     &  0.000000e+00 \\
-gC        &  0.000000e+00 \\
-real\_data &  0.000000e+00 \\
-\_K\_f\_\_1   &  3.015482e+23 \\
-\_M\_h\_\_1   &  4.082007e+24 \\
-\_MO\_\_1    &  4.297398e+24 \\
-\_Lf\_\_1    & -2.153912e+23 \\
-\_h\_\_1     &  3.600000e-02 \\
-\_L\_\_1     & -2.153912e+23 \\
-\_M\_\_1     &  4.082007e+24 \\
-\_K\_HD\_\_1  &  4.297398e+24 \\
-\_I\_h\_\_1   &  9.969545e+22 \\
-\_ph\_\_1    &  1.000000e+00 \\
+alpha       &  1.000000e+00 \\
+alpha\_k     &  3.000000e-01 \\
+gamma\_F     &  8.000000e-02 \\
+gamma\_u     &  9.000000e-02 \\
+omega       &  2.500000e-01 \\
+rm          &  1.200000e-02 \\
+spread\_l    &  0.000000e+00 \\
+spread\_mo   &  0.000000e+00 \\
+un          &  8.000000e-01 \\
+v           &  1.200000e+00 \\
+phi\_0       &  2.500000e-02 \\
+phi\_1       &  1.000000e-01 \\
+R           &  7.000000e-01 \\
+infla       &  0.000000e+00 \\
+gC          &  2.400000e-02 \\
+equal\_rates &  1.000000e+00 \\
+\_K\_f\_\_1     &  3.600342e+23 \\
+\_M\_h\_\_1     &  4.040231e+24 \\
+\_MO\_\_1      &  4.297398e+24 \\
+\_Ck\_\_1      &  6.779290e+22 \\
+\_Lf\_\_1      & -2.571670e+23 \\
+\_h\_\_1       &  3.600000e-02 \\
+\_L\_\_1       & -2.571670e+23 \\
+\_M\_\_1       &  4.040231e+24 \\
+\_K\_HD\_\_1    &  4.297398e+24 \\
+\_I\_h\_\_1     &  9.969545e+22 \\
+\_ph\_\_1      &  1.000000e+00 \\
 \bottomrule
 \end{tabular}
 #+end_export
@@ -923,37 +926,38 @@ print(shock4.to_latex())
 \toprule
 {} &         \$\textbackslash pi\$ \\
 \midrule
-alpha     &  1.000000e+00 \\
-alpha\_k   &  3.000000e-01 \\
-gamma\_F   &  8.000000e-02 \\
-gamma\_u   &  9.000000e-02 \\
-omega     &  2.500000e-01 \\
-rm        &  1.000000e-02 \\
-spread\_l  &  0.000000e+00 \\
-spread\_mo &  0.000000e+00 \\
-un        &  8.000000e-01 \\
-v         &  1.200000e+00 \\
-phi\_0     &  2.500000e-02 \\
-phi\_1     &  1.000000e-01 \\
-R         &  7.000000e-01 \\
-infla     &  5.000000e-02 \\
-gC        &  0.000000e+00 \\
-real\_data &  0.000000e+00 \\
-\_K\_f\_\_1   &  4.237527e+25 \\
-\_M\_h\_\_1   &  4.732937e+26 \\
-\_MO\_\_1    &  4.902237e+26 \\
-\_Lf\_\_1    & -1.692998e+25 \\
-\_h\_\_1     &  4.300000e-02 \\
-\_L\_\_1     & -1.692998e+25 \\
-\_M\_\_1     &  4.732937e+26 \\
-\_K\_HD\_\_1  &  4.902237e+26 \\
-\_I\_h\_\_1   &  1.372763e+25 \\
-\_ph\_\_1    &  1.472685e+21 \\
-TIME      &  1.051000e+03 \\
-Ih/Y      &  5.000000e-01 \\
-I/Y       &  5.430000e-01 \\
-Z/Y       &  7.070000e-01 \\
-gY        &  2.900000e-02 \\
+alpha       &  1.000000e+00 \\
+alpha\_k     &  3.000000e-01 \\
+gamma\_F     &  8.000000e-02 \\
+gamma\_u     &  9.000000e-02 \\
+omega       &  2.500000e-01 \\
+rm          &  1.000000e-02 \\
+spread\_l    &  0.000000e+00 \\
+spread\_mo   &  0.000000e+00 \\
+un          &  8.000000e-01 \\
+v           &  1.200000e+00 \\
+phi\_0       &  2.500000e-02 \\
+phi\_1       &  1.000000e-01 \\
+R           &  7.000000e-01 \\
+infla       &  5.000000e-02 \\
+gC          &  2.400000e-02 \\
+equal\_rates &  1.000000e+00 \\
+\_K\_f\_\_1     &  5.035507e+25 \\
+\_M\_h\_\_1     &  4.701057e+26 \\
+\_MO\_\_1      &  4.902237e+26 \\
+\_Ck\_\_1      &  9.334785e+24 \\
+\_Lf\_\_1      & -2.011805e+25 \\
+\_h\_\_1       &  4.300000e-02 \\
+\_L\_\_1       & -2.011805e+25 \\
+\_M\_\_1       &  4.701057e+26 \\
+\_K\_HD\_\_1    &  4.902237e+26 \\
+\_I\_h\_\_1     &  1.372763e+25 \\
+\_ph\_\_1      &  1.472685e+21 \\
+TIME        &  1.051000e+03 \\
+Ih/Y        &  4.210000e-01 \\
+I/Y         &  4.640000e-01 \\
+Z/Y         &  7.070000e-01 \\
+gY          &  2.900000e-02 \\
 \bottomrule
 \end{tabular}
 #+end_export
